tests/type-errors/import_arl_fun_error_unknown_fun.arl
archetype import_arl_fun_error_unknown_fun

import "../passed/import_arl_fun_def.arl"

variable res : nat = 0

entry exec() {
  res := import_arl_fun_def::unknown_fun()
}
